# SkillMate

./: .codecov.yml  .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d62332c6d555_initial_schema.py  e9b8e7a972f6_create_user_roles_table.py  f9a8f677a0bd_add_icon_path_column_to_skill_model.py
backend/: .coverage  .env.example  .env.test  main.py  skillmate.db  test_import.py
backend/controllers/: auth_controller.py  skill_controller.py
backend/core/: auth.py
backend/data/: db.py  fake_skills.py
backend/models/: skill.py
backend/models/base/: auth_response.py  response_schemas.py
backend/models/skill/: __init__.py  db_model.py  schema.py
backend/models/skill_level/: base.py  db_model.py
backend/models/user/: __init__.py  db_model.py  schema.py
backend/routes/: index.py  skill_routes.py
backend/routes/api/: auth_routes.py  index.py  skill_routes.py
backend/seeders/: seed.py
backend/services/: auth_service.py  skill_service.py
backend/src/: main.py
backend/src/controllers/: auth_controller.py  skill_controller.py
backend/src/core/: auth.py  config.py  redis.py
backend/src/data/: db.py  fake_skills.py
backend/src/middlewares/: logging.py
backend/src/models/: __init__.py
backend/src/models/base/: auth_response.py  response_schemas.py
backend/src/models/skill/: __init__.py  base.py  db_model.py  schema.py
backend/src/models/skill_level/: __init__.py  db_model.py  schema.py
backend/src/models/user/: __init__.py  db_model.py  (+1 more)
backend/src/routes/: index.py
backend/src/seeders/: seed.py
backend/src/services/: auth_service.py  helpers.py  permissions.py  skill_service.py  validations.py
backend/src/utils/: helpers.py  roles.py  types.py
backend/tests/: conftest.py  test_admin.py  test_auth_dependency.py  test_permissions_dependency.py  test_redis.py  test_save_file_utilty.py  test_seed_initial_data.py  test_skills.py  test_users.py
backend/tests/utils/: helpers.py  seed.py
client/: Dockerfile  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/.husky/: pre-commit
client/src/: index.css  main.tsx
client/src/components/: CreateSkillForm.tsx  InviteMentorButton.tsx  Navbar.tsx  Sidebar.tsx  SkillCard.tsx  SkillsList.tsx
client/src/hooks/: useAuthRedirect.ts  useRole.ts
client/src/layouts/: AdminLayout.tsx  AuthLayout.tsx  Layout.tsx  PublicLayout.tsx
client/src/pages/: AddSkill.tsx  Home.tsx  LoginPage.tsx  Profile.tsx  SkillCreatePage.tsx  SkillEditPage.tsx  Skills.tsx
client/src/router/: index.tsx
client/src/store/: useAuthStore.ts  useSkillLevelStore.ts  useSkillStore.ts
client/src/types/: auth.ts  skill.ts  skill_levels.ts
client/src/utils/: api.ts  apiErrorHandler.ts  fetchRequest.ts  fetchWrapper.ts  fethchRequest.ts  skillFormData.ts
logs/: day-14.md  day-15.md  day-16  day-18.md  day-20.md  day-8.md
(+18 files in other folders)
